@@ -62,7 +62,8 @@ _cmsDecodeDateTimeNumber                 =    _cmsDecodeDateTimeNumber
 _cmsDefaultICCintents                    =    _cmsDefaultICCintents
 cmsDeleteTransform                       =    cmsDeleteTransform
 cmsDeltaE                                =    cmsDeltaE
-cmsDetectBlackPoint                      =    cmsDetectBlackPoint
+cmsDetectBlackPoint                =    cmsDetectBlackPoint
+cmsDetectDestinationBlackPoint           =    cmsDetectDestinationBlackPoint
 cmsDetectTAC                             =    cmsDetectTAC
 cmsDesaturateLab                         =    cmsDesaturateLab
 cmsDoTransform                           =    cmsDoTransform
